tests/mixed_flavors/mixed_flavors.exp
Error ----------------------------------------------------------------------------------------------------- test.js:2:18

Cannot cast `42` to `$NonMaybeType` because null [1] is incompatible with mixed [2]. [incompatible-type]

   test.js:2:18
   2|   42 as number | null as $NonMaybeType<mixed>; // error null ~> MixedT (NonMaybe)
                       ^^^^ [1]

References:
   test.js:2:40
   2|   42 as number | null as $NonMaybeType<mixed>; // error null ~> MixedT (NonMaybe)
                                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:4:18

Cannot cast `42` to `$NonMaybeType` because undefined [1] is incompatible with mixed [2]. [incompatible-type]

   test.js:4:18
   4|   42 as number | void as $NonMaybeType<mixed>; // error undefined ~> MixedT (NonMaybe)
                       ^^^^ [1]

References:
   test.js:4:40
   4|   42 as number | void as $NonMaybeType<mixed>; // error undefined ~> MixedT (NonMaybe)
                                             ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:9

Cannot cast `42` to `$NonMaybeType` because null or undefined [1] is incompatible with mixed [2]. [incompatible-type]

   test.js:6:9
   6|   42 as ?number as $NonMaybeType<mixed>; // error null | undefined ~> MixedT (NonMaybe)
              ^^^^^^^ [1]

References:
   test.js:6:34
   6|   42 as ?number as $NonMaybeType<mixed>; // error null | undefined ~> MixedT (NonMaybe)
                                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:11:19

Cannot cast `1` to `typeof fn` because number [1] is incompatible with unknown function [2]. [incompatible-type]

   test.js:11:19
   11|       const one = 1 as typeof fn; // error number ~> MixedT (Mixed_function)
                         ^ [1]

References:
   test.js:11:24
   11|       const one = 1 as typeof fn; // error number ~> MixedT (Mixed_function)
                              ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:18:22

Cannot cast `false` to `typeof x` because boolean [1] is incompatible with mixed [2]. [incompatible-type]

   test.js:18:22
   18|       const false_ = false as typeof x; // error false ~> MixedT (Mixed_truthy)
                            ^^^^^ [1]

References:
   test.js:18:31
   18|       const false_ = false as typeof x; // error false ~> MixedT (Mixed_truthy)
                                     ^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:33:3

Cannot cast `obj.a` to `$NonMaybeType` because undefined [1] is incompatible with mixed [2]. [incompatible-type]

   test.js:33:3
   33|   obj.a as $NonMaybeType<mixed>; // error undefined ~> MixedT (non-maybe)
         ^^^^^

References:
   test.js:32:34
   32| function test_optional(obj: {a?: number}) {
                                        ^^^^^^ [1]
   test.js:33:26
   33|   obj.a as $NonMaybeType<mixed>; // error undefined ~> MixedT (non-maybe)
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:34:3

Cannot cast `obj.a` to number because undefined [1] is incompatible with number [2]. [incompatible-type]

   test.js:34:3
   34|   obj.a as number; // error
         ^^^^^

References:
   test.js:32:34
   32| function test_optional(obj: {a?: number}) {
                                        ^^^^^^ [1]
   test.js:34:12
   34|   obj.a as number; // error
                  ^^^^^^ [2]



Found 7 errors
